...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PnU-zN-erB">
                                <rect key="frame" x="20" y="664" width="374" height="50"/>
                                <color key="backgroundColor" red="0.3411764706" green="0.67843137249999996" blue="0.015686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Sign"/>
                                <connections>
                                    <action selector="signTapped:" destination="FMY-fm-MDj" eventType="touchUpInside" id="YZK-LU-3Nc"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YJt-Iy-Z2Q">
                                <rect key="frame" x="20" y="722" width="374" height="50"/>
                                <color key="backgroundColor" red="0.3411764706" green="0.67843137249999996" blue="0.015686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="tQf-Zj-k4o"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Validate"/>
                                <connections>
                                    <action selector="validateTapped:" destination="FMY-fm-MDj" eventType="touchUpInside" id="beP-L4-s70"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFY-dk-CWl">
                                <rect key="frame" x="20" y="792" width="374" height="50"/>
...
                                <rect key="frame" x="20" y="430.5" width="374" height="45"/>
                                <color key="backgroundColor" red="0.3411764706" green="0.67843137249999996" blue="0.015686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="i2g-MT-bsm"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Sign Message"/>
                                <connections>
                                    <action selector="signButtonTapped:" destination="iiY-Jv-4K2" eventType="touchUpInside" id="hRe-Vk-Dqn"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1kH-q1-Ccd">
                                <rect key="frame" x="80" y="321" width="254" height="254"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="1kH-q1-Ccd" secondAttribute="height" multiplier="1:1" id="zAf-la-zzo"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzY-QA-NqC">
                                <rect key="frame" x="20" y="61" width="374" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
                                <rect key="frame" x="20" y="430.5" width="374" height="45"/>
                                <color key="backgroundColor" red="0.3411764705882353" green="0.67843137254901964" blue="0.015686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="zLy-PS-5ND"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Validate Message"/>
                                <connections>
                                    <action selector="validateButtonTapped:" destination="tEb-Hs-eeR" eventType="touchUpInside" id="AHX-iT-GLx"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
