//
//  EthereumWallet.swift
//  EthereumWallet
//
//  Created by Gor Hakobyan on 2/15/20.
//  Copyright © 2020 Gor Hakobyan. All rights reserved.
//

import Foundation

struct EthereumWallet {
    var address: String
    var balance: String
}
