...
            <objects>
                <viewController storyboardIdentifier="SetupViewController" id="ze7-Ie-aoN" customClass="SetupViewController" customModule="EthereumWallet" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="VLB-VC-wJW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Private Key" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eGz-Rt-Lli">
                                <rect key="frame" x="20" y="170" width="374" height="40"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="hcJ-uZ-ABV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="20" y="218" width="374" height="40"/>
                                <color key="backgroundColor" red="0.3411764706" green="0.67843137249999996" blue="0.015686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="AQe-vr-eoZ"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="doneButtonTapped:" destination="ze7-Ie-aoN" eventType="touchUpInside" id="xRj-aE-fJw"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
